# pytest-tutorial

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: tests.yml
src/calculator/: operations.py
tests/: conftest.py  test_operations.py  test_operations_markers.py
