[tool.poetry]
name = "pytest-tutorial"
version = "0.1.0"
description = "A tutorial project for learning pytest"
authors = ["Shahin ABDI <shahin.abdi@ias.u-psud.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
